--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,28 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
-</html>
+{% extends '@SidusAdmin/base.html.twig' %}
+
+{% block title %}Sidus/AdminBundle Demo{% endblock %}
+
+{% block body %}
+    <a href="https://github.com/VincentChalnot/SidusAdminDemo">
+        <img class="fixed-top" style="left:auto"
+             src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+    </a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{{ path('App\\Action\\HomeAction') }}">Sidus/AdminBundle</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('App\\Action\\HomeAction') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ admin_path('News', 'list') }}">News</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    {{ parent() }}
+{% endblock %}
